[package]
name = "pallet-fungible"
version = "0.1.0"
authors = ["Logan Saether <x@logansaether.com>"]
edition = "2018"

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
    'sp-runtime/std',
    'pallet-balances/std'
]
